<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/menu_group_1" >
        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/inbox_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/starred_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/ic_send_black"
            android:title="@string/sent_mail_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/draft_string" />


        <item
            android:id="@+id/all_mail"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/all_mail_string" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/trash_string" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/spam_string" >
        </item>
        <item  android:id="@+id/sub_items"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="sub menus">
            <menu>
                <group android:checkableBehavior="single" >
                    <item
                        android:id="@+id/submenu_1"
                        android:checked="false"
                        android:icon="@drawable/ic_error_black"
                        android:title="Sub item 1" />
                    <item
                        android:id="@+id/submenu_2"
                        android:checked="false"
                        android:icon="@drawable/ic_error_black"
                        android:title="Sub item 2" />
                </group>
            </menu>
        </item>
    </group>
</menu>